--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
+		"@hugeicons/core-free-icons": "^1.0.14",
+		"@hugeicons/react": "^1.0.5",
 		"@tailwindcss/postcss": "^4.1.5",
 		"@tailwindcss/vite": "^4.1.5",
 		"bcryptjs": "^3.0.2",
-		"iconsax-react": "^0.0.8",
 		"lucide": "^0.483.0",
 		"lucide-react": "^0.479.0",
 		"papaparse": "^5.5.2",
