--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=8080
 ACCESS_SECRET=your_access_secret
 REFRESH_SECRET=your_refresh_secret
+MONGODB_URI=mongodb://localhost:27017
+JWT_SECRET="shadesofprakash"
