--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
-		"@types/react": "^19.0.8",
+		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.0.3",
 		"@vitejs/plugin-react": "^4.3.4",
 		"autoprefixer": "^10.4.21",
@@ -38,6 +38,7 @@
 		"postcss": "^8.5.3",
 		"serve": "^14.2.4",
 		"tailwindcss": "^4.1.5",
-		"vite": "^6.1.0"
+		"vite": "^6.1.0",
+		"vite-plugin-svgr": "^4.3.0"
 	}
 }
