--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,15 @@
 		"@hugeicons/react": "^1.0.5",
 		"@tailwindcss/postcss": "^4.1.5",
 		"@tailwindcss/vite": "^4.1.5",
+		"@tanstack/react-query": "^5.81.5",
 		"bcryptjs": "^3.0.2",
 		"lucide": "^0.483.0",
 		"lucide-react": "^0.479.0",
 		"papaparse": "^5.5.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router": "^7.2.0"
+		"react-router": "^7.2.0",
+		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
